--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cat-gallery-gestalt-masonry",
   "version": "0.1.0",
-  "homepage": "https://hlpetway.github.io/",
+  "homepage": "https://hlpetway.github.io/my-app",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
