--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cat-gallery-gestalt-masonry",
   "version": "0.1.0",
-  "homepage": "https://hlpetway.github.io/my-app",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
